force-app/main/default/objects/Account/fields/Aadhar_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Aadhar_Card_Number__c</fullName>
    <formula>IF ((LEN(Adhar_Card__c)&gt;=4),LEFT(Adhar_Card__c, LEN(Adhar_Card__c) - 4) &amp; &apos;****&apos;,Adhar_Card__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Masked Aadhar Number</inlineHelpText>
    <label>Aadhar Card Number</label>
    <type>Text</type>
</CustomField>