force-app/main/default/objects/Account/fields/Actual_MSA__c.field-meta.xml
<CustomField>
    <fullName>Actual_MSA__c</fullName>
    <label>Actual MSA %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>