force-app/main/default/objects/Account/fields/Adhar_Card__c.field-meta.xml
<CustomField>
    <fullName>Adhar_Card__c</fullName>
    <label>Aadhar Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>