force-app/main/default/objects/Account/fields/After_Decom_RFI_Sites__c.field-meta.xml
<CustomField>
    <fullName>After_Decom_RFI_Sites__c</fullName>
    <defaultValue>0</defaultValue>
    <label>RFI Sites-After Last Decom</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>