force-app/main/default/objects/Account/fields/Bank_Acc_No__c.field-meta.xml
<CustomField>
    <fullName>Bank_Acc_No__c</fullName>
    <formula>IF ((LEN(Bank_Account_Number__c)&gt;=4),LEFT(Bank_Account_Number__c, LEN(Bank_Account_Number__c) - 4) &amp; &apos;****&apos;,Bank_Account_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Masked Account Number</inlineHelpText>
    <label>Bank Acc No</label>
    <type>Text</type>
</CustomField>