force-app/main/default/objects/Account/fields/Bank_IFSC_Code__c.field-meta.xml
<CustomField>
    <fullName>Bank_IFSC_Code__c</fullName>
    <label>Bank IFSC Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>