force-app/main/default/objects/Account/fields/Circle__c.field-meta.xml
<CustomField>
    <fullName>Circle__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is used to capture the circle that the account is associated with.</description>
    <label>Circle</label>
    <referenceTo>Circles__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>