force-app/main/default/objects/Account/fields/Decom_MSA_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Decom_MSA_Percentage__c</fullName>
    <label>Decom MSA %</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>