force-app/main/default/objects/Account/fields/ERPNextId__c.field-meta.xml
<CustomField>
    <fullName>ERPNextId__c</fullName>
    <externalId>true</externalId>
    <label>ERPNextId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>