force-app/main/default/objects/Account/fields/Finance_Team__c.field-meta.xml
<CustomField>
    <fullName>Finance_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Team</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>