force-app/main/default/objects/Account/fields/Is_Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_Billing_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Billing Account</label>
    <type>Checkbox</type>
</CustomField>