force-app/main/default/objects/Account/fields/Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Business__c</fullName>
    <label>Line of Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small Cell</fullName>
            </value>
            <value>
                <fullName>FTTH</fullName>
            </value>
            <value>
                <fullName>MDU</fullName>
            </value>
            <value>
                <fullName>SDU</fullName>
            </value>
            <value>
                <fullName>UGFC</fullName>
            </value>
            <value>
                <fullName>OHFC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>