force-app/main/default/objects/Account/fields/Name_Same_as_in_Bank__c.field-meta.xml
<CustomField>
    <fullName>Name_Same_as_in_Bank__c</fullName>
    <label>Name(Same as in Bank)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>