force-app/main/default/objects/Account/fields/Number_of_RFI_Site__c.field-meta.xml
<CustomField>
    <fullName>Number_of_RFI_Site__c</fullName>
    <label>Number of RFI Site</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>