force-app/main/default/objects/Account/fields/PAN_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>PAN_Card_Number__c</fullName>
    <formula>IF ((LEN(PAN_Number__c)&gt;=4),LEFT(PAN_Number__c, LEN(PAN_Number__c) - 5) &amp; &apos;*****&apos;,PAN_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Masked PAN Number</inlineHelpText>
    <label>PAN Card Number</label>
    <type>Text</type>
</CustomField>