force-app/main/default/objects/Account/fields/Suppliertype__c.field-meta.xml
<CustomField>
    <fullName>Suppliertype__c</fullName>
    <description>This field is used to capture the supplier type.</description>
    <label>Supplier Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Service Only</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Material Only</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Both</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>