force-app/main/default/objects/Account/fields/Tech_Subtitle__c.field-meta.xml
<CustomField>
    <fullName>Tech_Subtitle__c</fullName>
    <formula>Name + &quot; (&quot; + CASE(Text(Suppliertype__c), &quot;1&quot;, &quot;Service&quot;, &quot;2&quot;, &quot;Material&quot;,&quot;3&quot;,&quot;Service and Material&quot;,&quot;&quot;) + &quot; - &quot; +  BillingState + &quot; - &quot; +  BillingCity + &quot;)&quot;</formula>
    <label>Detailed Supplier Name</label>
    <type>Text</type>
</CustomField>