force-app/main/default/objects/Account/fields/Tech_Telecom_Circle__c.field-meta.xml
<CustomField>
    <fullName>Tech_Telecom_Circle__c</fullName>
    <label>Telecom Circle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AP and Telanga</fullName>
            </value>
            <value>
                <fullName>Assam and North East</fullName>
            </value>
            <value>
                <fullName>Bihar and Jharkhand</fullName>
            </value>
            <value>
                <fullName>Delhi and NCR</fullName>
            </value>
            <value>
                <fullName>Gujarat and D&amp;D</fullName>
            </value>
            <value>
                <fullName>HPHP</fullName>
            </value>
            <value>
                <fullName>J&amp;K</fullName>
            </value>
            <value>
                <fullName>Karnataka</fullName>
            </value>
            <value>
                <fullName>Kolkata and Rest of West - Bengal</fullName>
            </value>
            <value>
                <fullName>M&amp;G</fullName>
            </value>
            <value>
                <fullName>MPCG</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Odisha</fullName>
            </value>
            <value>
                <fullName>Rajasthan</fullName>
            </value>
            <value>
                <fullName>Tamilnadu and Kerala</fullName>
            </value>
            <value>
                <fullName>UP East</fullName>
            </value>
            <value>
                <fullName>UP West</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>