force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Type__c</columns>
    <columns>Circle__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>